# event-mgt-system

./: .gitignore  README.md  db.sqlite3  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt
accounts/: admin.py  forms.py  middlewares.py  models.py  signals.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_user_groups_user_is_superuser_user_user_permissions.py  0003_user_is_active.py  0004_userprofile.py  0005_alter_user_is_active.py  0006_userprofile_profile_pic.py  0007_userprofile_about_organizer.py  0008_userprofile_is_completed_userprofile_is_organizer.py  0009_alter_userprofile_country.py  0010_alter_userprofile_user.py  0011_organizerapplication.py  0012_remove_user_is_organizer.py  0013_userprofile_created_at.py  0013_userprofile_role.py  0014_userprofile_is_validator.py
admin_panel/: apps.py  context_processor.py  decorators.py  models.py  signals.py  urls.py  views.py
admin_panel/migrations/: 0001_initial.py  __init__.py
config/: settings.py  urls.py
config/settings/: development.py  production.py  settings.py
events/: admin.py  fake_events.py  forms.py  managers.py  models.py  urls.py  views.py
events/migrations/: 0001_initial.py  0002_event_is_published.py  0003_event_slug.py  0004_tickettype_alter_ticket_ticket_type.py  0005_tickettype_quantity.py  0006_remove_tickettype_quantity.py  0007_event_event_image.py  0008_alter_event_end_time.py  0009_remove_event_ticket_price.py  0010_alter_event_is_published_alter_event_status.py  0012_remove_category_events_event_categories.py  (+1 more)
templates/: base.html
(+61 files in other folders)
