[project]
name = "event-management-sys"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.5",
    "django-allauth>=65.11.0",
    "django-htmx>=1.23.2",
    "django-tailwind>=4.2.0",
    "psycopg2-binary>=2.9.10",
    "qrcode>=8.2",
    "requests>=2.32.5",
]
